added meta data

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 -->
 <html>
 	<head>
+		<meta name="keywords" content="anees, merzi, anees merzi, yaboyanees, merzianees">
+		<meta name="description" content="Find more about what Anees loves to do by viewing his portfolio page.">
+
 		<title>Anees Merzi Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
