added new project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<meta name="keywords" content="anees, merzi, anees merzi, yaboyanees, merzianees">
-		<meta name="description" content="Find more about what Anees loves to do by viewing his portfolio page.">
+		<meta name="description" content="Click to view Anees Merzi's portfolio page and learn his passions.">
 
 		<title>Anees Merzi Portfolio</title>
 		<meta charset="utf-8" />
@@ -41,7 +41,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Anees Merzi</strong>.</h1>
 							</header>
-							<p>Some know me as <em>"Doctor"</em> but you can call me Anees</p>
+							<p><em>I lead Software teams to develop applications in the Army</em></p>
 							<a href="#passion" class="button big scrolly">Learn More About Me</a>
 						</div>
 					</div>
@@ -53,7 +53,7 @@
 				<article>
 					<header>
 						<h2>About me and my passion.</h2>
-						<p>I love all things web. I currently lead IT teams to automate processes for the Army. I use the following to support my hobbies:</p>
+						<p>I love all things web and mobile. I particularly love using the following to support my hobbies:</p>
 					</header>
 					<div class="container">
 						<div class="row">
@@ -90,6 +90,13 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
+									<a class="image featured"><img src="images/fs.png" /></a>
+									<h3>fhirStarters</h3>
+									<p>Android Application that helps parents manage their kids medication by using data from the cloud to generate alerts.</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
 									<a class="image featured"><img src="images/f4s.png" /></a>
 									<h3>Food 4 Students</h3>
 									<p>Prototype Application for USDA to make a production app that helps families apply for free/discounted school lunch </p>
@@ -102,6 +109,8 @@
 									<p>Made dynamic graphs that depict 100,000+ data points for NFL teams to predict team result week by week</p>
 								</article>
 							</div>
+						</div>
+						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/ops.png" /></a>
@@ -109,8 +118,6 @@
 									<p>Application to help non-profit organization manage volunteers and automate volunteer onboarding</p>
 								</article>
 							</div>
-						</div>
-						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/icr.png" /></a>
@@ -125,6 +132,8 @@
 									<p>Decision Support System for HR department to select the best internal employee for the next promotion/job</p>
 								</article>
 							</div>
+						</div>
+						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/fbt.png" /></a>
@@ -148,6 +157,7 @@
 									<li><a href="https://www.linkedin.com/in/aneesmerzi" class="icon fa-linkedin"></a></li>
 									<li><a href="https://github.com/yaboyanees" class="icon fa-github"></a></li>
 									<li><a href="https://plus.google.com/u/0/+AneesMerzi" class="icon fa-google-plus"></a></li>
+									<li><a href="https://devpost.com/Yaboyanees/" class="icon fa-anchor"></a></li>
 								</ul>
 							</div>
 						</div>
