--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Miniport by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!-- Miniport by HTML5 UP html5up.net | @n33co Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
 <html>
 	<head>
-		<meta name="keywords" content="anees, merzi, anees merzi, yaboyanees, merzianees">
-		<meta name="description" content="Click to view Anees Merzi's portfolio page and learn his passions.">
+		<meta name="keywords" content="anees, merzi, anees merzi, yaboyanees, merzianees, anees portfolio">
+		<meta name="description" content="Click to view Anees Merzi's portfolio page.">
 
 		<title>Anees Merzi Portfolio</title>
 		<meta charset="utf-8" />
@@ -52,8 +48,8 @@
 			<div class="wrapper style2" id="passion">
 				<article>
 					<header>
-						<h2>About me and my passion.</h2>
-						<p>I love all things web and mobile. I particularly love using the following to support my hobbies:</p>
+						<h2>About me</h2>
+						<p>I love all things web and mobile. I'm currently a software project manager. I particularly love using the following:</p>
 					</header>
 					<div class="container">
 						<div class="row">
@@ -90,6 +86,13 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
+									<a class="image featured"><img src="images/disrupt.png" /></a>
+									<h3>disruptArmy</h3>
+									<p>Informational Web app about passed and upcoming @disruptArmy hackathons ranging from cyber security to development.</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
 									<a class="image featured"><img src="images/fs.png" /></a>
 									<h3>fhirStarters</h3>
 									<p>Android Application that helps parents manage their kids medication by using data from the cloud to generate alerts.</p>
@@ -102,6 +105,8 @@
 									<p>Prototype Application for USDA to make a production app that helps families apply for free/discounted school lunch </p>
 								</article>
 							</div>
+						</div>
+						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/q5.png" /></a>
@@ -109,8 +114,6 @@
 									<p>Made dynamic graphs that depict 100,000+ data points for NFL teams to predict team result week by week</p>
 								</article>
 							</div>
-						</div>
-						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/ops.png" /></a>
@@ -125,6 +128,8 @@
 									<p>Informative website for Industrial Coating and Restoration INC. Used to showcase their services and references</p>
 								</article>
 							</div>
+						</div>
+						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/hr1.png" /></a>
@@ -132,8 +137,6 @@
 									<p>Decision Support System for HR department to select the best internal employee for the next promotion/job</p>
 								</article>
 							</div>
-						</div>
-						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/fbt.png" /></a>
