--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<article class="box style2">
 									<a class="image featured"><img src="images/disrupt.png" /></a>
 									<h3>disruptArmy</h3>
-									<p>Informational Web app about passed and upcoming hackathons ranging from cyber security to development.</p>
+									<p>Informational site about past and upcoming hackathons ranging from cyber security to development.</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
