--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<article class="container">
 					<div class="row">
 						<div class="4u 12u(mobile)">
-							<span class="image fit"><img src="https://media.licdn.com/media/AAEAAQAAAAAAAAZIAAAAJDM3Zjg4Y2U1LTFjOTktNDhlZC1hNGQ5LWFkNTY2ODYxZGZjYw.jpg" /></span>
+							<span class="image fit"><img src="images/profile.png" /></span>
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
@@ -86,11 +86,50 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
+									<a class="image featured"><img src="images/cg dss.png" /></a>
+									<h3>CG DSS</h3>
+									<p>Data Visualization Application for a 4-Star General to make resource decisions for the next quarter.</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
+									<a class="image featured"><img src="images/mtc.png" /></a>
+									<h3>Master Training Calendar</h3>
+									<p>Trainnig Calendar that pulls from 22 different calendars to display events in a drilldown format with nested organizations.</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
+									<a class="image featured"><img src="images/perstat.png" /></a>
+									<h3>Personnel Status Report</h3>
+									<p>Application that receives reports from 60 different organizations and visualizes the data for a snapshot of where eveyone is at.</p>
+								</article>
+							</div>
+						</div>
+						<div class="row">
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
+									<a class="image featured"><img src="images/homepage.png" /></a>
+									<h3>Internal Corporate Site</h3>
+									<p>Created a new internal site for 100,000+ daily users to facilitate information sharing to drive daily operations.</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
+									<a class="image featured"><img src="images/directory.png" /></a>
+									<h3>Contact Directory</h3>
+									<p>Application to help users find contact details and return results by directorate, rank, and name.</p>
+								</article>
+							</div>
+							<div class="4u 12u(mobile)">
+								<article class="box style2">
 									<a class="image featured"><img src="images/disrupt.png" /></a>
 									<h3>disruptArmy</h3>
 									<p>Informational site about past and upcoming hackathons ranging from cyber security to development.</p>
 								</article>
 							</div>
+						</div>
+						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/fs.png" /></a>
@@ -105,8 +144,6 @@
 									<p>Prototype Application for USDA to make a production app that helps families apply for free/discounted school lunch </p>
 								</article>
 							</div>
-						</div>
-						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/q5.png" /></a>
@@ -114,6 +151,8 @@
 									<p>Made dynamic graphs that depict 100,000+ data points for NFL teams to predict team result week by week</p>
 								</article>
 							</div>
+						</div>
+						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/ops.png" /></a>
@@ -128,8 +167,6 @@
 									<p>Informative website for Industrial Coating and Restoration INC. Used to showcase their services and references</p>
 								</article>
 							</div>
-						</div>
-						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/hr1.png" /></a>
@@ -137,6 +174,8 @@
 									<p>Decision Support System for HR department to select the best internal employee for the next promotion/job</p>
 								</article>
 							</div>
+						</div>
+						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a class="image featured"><img src="images/fbt.png" /></a>
