--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Miniport by HTML5 UP html5up.net | @n33co Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
 <html>
 	<head>
-		<meta name="keywords" content="anees, merzi, anees merzi, yaboyanees, merzianees, anees portfolio">
+		<meta name="keywords" content="aneesmerzi, anees merzi, yaboyanees, merzianees, anees portfolio">
 		<meta name="description" content="Click to view Anees Merzi's portfolio page.">
 
 		<title>Anees Merzi Portfolio</title>
@@ -164,7 +164,7 @@
 							<article class="box style2">
 								<a class="image featured"><img src="images/icr.png" /></a>
 								<h3>ICR INC.</h3>
-								<p>Informative website for Industrial Coating and Restoration INC. Used to showcase their services and references</p>
+								<p>Informative website for Industrial Coating and Restoration Inc. Used to showcase their services and references</p>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
