--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<header>
 							<h1>Hi. I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
-						<p><em>I lead Software teams to develop applications in the Army</em></p>
+						<p><em>I lead Software teams to develop web applications</em></p>
 						<a href="#passion" class="button big scrolly">Learn More About Me</a>
 					</div>
 				</div>
