--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
-								<a class="image featured"><img src="images/cg dss.png" /></a>
-								<h3>CG DSS</h3>
+								<a class="image featured"><img src="images/eea.png" /></a>
+								<h3>Executive Engagement App</h3>
 								<p>Data Visualization Application for a 4-Star General to make resource decisions for the next quarter.</p>
 							</article>
 						</div>
@@ -116,7 +116,7 @@
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
-								<a class="image featured"><img src="images/directory.png" /></a>
+								<a class="image featured"><img src="images/dir.png" /></a>
 								<h3>Contact Directory</h3>
 								<p>Application to help users find contact details and return results by directorate, rank, and name.</p>
 							</article>
