--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<article class="box style2">
 								<a class="image featured"><img src="images/mtc.png" /></a>
 								<h3>Master Training Calendar</h3>
-								<p>Trainnig Calendar that pulls from 22 different calendars to display events in a drilldown format with nested organizations.</p>
+								<p>Training Calendar in a timeline view that displays events in a drilldown format to show how each event is nested.</p>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
