--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<nav id="nav">
 			<ul class="container">
 				<li><a href="#top">Top</a></li>
-				<li><a href="#passion">Passion</a></li>
+				<!-- <li><a href="#passion">Passion</a></li> -->
 				<li><a href="#portfolio">Portfolio</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
@@ -38,13 +38,13 @@
 							<h1>Hi. I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
 						<p><em>I lead Software teams to develop web applications</em></p>
-						<a href="#passion" class="button big scrolly">Learn More About Me</a>
+						<a href="#portfolio" class="button big scrolly">See My Work</a>
 					</div>
 				</div>
 			</article>
 		</div>
 
-	    <!-- Work -->
+	    <!-- Work 
 		<div class="wrapper style2" id="passion">
 			<article>
 				<header>
@@ -74,16 +74,24 @@
 					<a href="#portfolio" class="button big scrolly">See some of my recent work</a>
 				</footer>
 			</article>
-		</div>
+		</div> -->
 
 	    <!-- Portfolio -->
 		<div class="wrapper style3" id="portfolio">
 			<article>
 				<header>
 					<h2>Here’s some of my recent work.</h2>
+					<p>I love all things web and mobile. I'm currently a software project manager.</p>
 				</header>
 				<div class="container">
 					<div class="row">
+						<div class="4u 12u(mobile)">
+							<article class="box style2">
+								<a class="image featured"><img src="images/etm.png" /></a>
+								<h3>Task Manager & Repository</h3>
+								<p>Approve and Track Task Progress issued in memos that are able to be searched for future reference.</p>
+							</article>
+						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/eea.png" /></a>
@@ -98,6 +106,8 @@
 								<p>Training Calendar in a timeline view that displays events in a drilldown format to show how each event is nested.</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/perstat.png" /></a>
@@ -105,8 +115,6 @@
 								<p>Application that receives reports from 60 different organizations and visualizes the data for a snapshot of where eveyone is at.</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/homepage.png" /></a>
@@ -121,6 +129,8 @@
 								<p>Application to help users find contact details and return results by directorate, rank, and name.</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/disrupt.png" /></a>
@@ -128,8 +138,6 @@
 								<p>Informational site about past and upcoming hackathons ranging from cyber security to development.</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/fs.png" /></a>
@@ -144,6 +152,8 @@
 								<p>Prototype Application for USDA to make a production app that helps families apply for free/discounted school lunch </p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/q5.png" /></a>
@@ -151,8 +161,6 @@
 								<p>Made dynamic graphs that depict 100,000+ data points for NFL teams to predict team result week by week</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/ops.png" /></a>
@@ -167,6 +175,8 @@
 								<p>Informative website for Industrial Coating and Restoration Inc. Used to showcase their services and references</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/hr1.png" /></a>
@@ -174,8 +184,6 @@
 								<p>Decision Support System for HR department to select the best internal employee for the next promotion/job</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/fbt.png" /></a>
