--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/eea.png" /></a>
-								<h3>Executive Engagement App</h3>
+								<h3>Executive Engagements</h3>
 								<p>Data Visualization Application for a 4-Star General to make resource decisions for the next quarter.</p>
 							</article>
 						</div>
