--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<article class="box style2">
 								<a class="image featured"><img src="images/perstat.png" /></a>
 								<h3>Personnel Status Report</h3>
-								<p>Application that receives reports from 60 different organizations and visualizes the data for a snapshot of where eveyone is at.</p>
+								<p>Visualizes 60 different organizations to provide senior executives a snapshot of where eveyone is at daily.</p>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
