--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<article class="box style2">
 								<a class="image featured"><img src="images/etm.png" /></a>
 								<h3>Task Manager & Repository</h3>
-								<p>Approve and Track Task Progress issued in memos that are able to be searched for future reference.</p>
+								<p>Approve and Track Tasks issued in memos that are searchable and archived for future reference.</p>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
