--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
 					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
+								<a class="image featured"><img src="images/oha.png" /></a>
+								<h3>OHA Grants Data Visualization App</h3>
+								<p>Data Visualization App that shows how OHA allocates money across Hawaii in a transparent manner.</p>
+							</article>
+						</div>
+						<div class="4u 12u(mobile)">
+							<article class="box style2">
 								<a class="image featured"><img src="images/etm.png" /></a>
 								<h3>Task Manager & Repository</h3>
 								<p>Approve and Track Tasks issued in memos that are searchable and archived for future reference.</p>
@@ -99,6 +106,8 @@
 								<p>Data Visualization Application for a 4-Star General to make resource decisions for the next quarter.</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/mtc.png" /></a>
@@ -106,8 +115,6 @@
 								<p>Training Calendar in a timeline view that displays events in a drilldown format to show how each event is nested.</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/perstat.png" /></a>
@@ -122,6 +129,8 @@
 								<p>Created a new internal site for 100,000+ daily users to facilitate information sharing to drive daily operations.</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/dir.png" /></a>
@@ -129,8 +138,6 @@
 								<p>Application to help users find contact details and return results by directorate, rank, and name.</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/disrupt.png" /></a>
@@ -145,6 +152,8 @@
 								<p>Android Application that helps parents manage their kids medication by using data from the cloud to generate alerts.</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/f4s.png" /></a>
@@ -152,8 +161,6 @@
 								<p>Prototype Application for USDA to make a production app that helps families apply for free/discounted school lunch </p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/q5.png" /></a>
@@ -166,13 +173,6 @@
 								<a class="image featured"><img src="images/ops.png" /></a>
 								<h3>OPS</h3>
 								<p>Application to help non-profit organization manage volunteers and automate volunteer onboarding</p>
-							</article>
-						</div>
-						<div class="4u 12u(mobile)">
-							<article class="box style2">
-								<a class="image featured"><img src="images/icr.png" /></a>
-								<h3>ICR INC.</h3>
-								<p>Informative website for Industrial Coating and Restoration Inc. Used to showcase their services and references</p>
 							</article>
 						</div>
 					</div>
@@ -189,6 +189,13 @@
 								<a class="image featured"><img src="images/fbt.png" /></a>
 								<h3>FB Tickets</h3>
 								<p>Helps automate the process of distributing/tracking tickets to football players and staff for each weeks games</p>
+							</article>
+						</div>
+						<div class="4u 12u(mobile)">
+							<article class="box style2">
+								<a class="image featured"><img src="images/icr.png" /></a>
+								<h3>ICR INC.</h3>
+								<p>Informative website for Industrial Coating and Restoration Inc. Used to showcase their services and references</p>
 							</article>
 						</div>
 					</div>
