--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/oha.png" /></a>
-								<h3>OHA Grants Data Visualization App</h3>
+								<h3>OHA Grants Data</h3>
 								<p>Data Visualization App that shows how OHA allocates money across Hawaii in a transparent manner.</p>
 							</article>
 						</div>
