--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
 					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
+								<a class="image featured"><img src="images/tt.png" /></a>
+								<h3>Travel Funding Tracker</h3>
+								<p>Temporary Travel Tracker for employees to request funds for their trips through a digital approvals process.</p>
+							</article>
+						</div>
+						<div class="4u 12u(mobile)">
+							<article class="box style2">
 								<a class="image featured"><img src="images/oha.png" /></a>
 								<h3>OHA Grants Data</h3>
 								<p>Data Visualization App that shows how OHA allocates money across Hawaii in a transparent manner.</p>
@@ -95,10 +102,12 @@
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/etm.png" /></a>
-								<h3>Task Manager & Repository</h3>
+								<h3>Tasks Manager</h3>
 								<p>Approve and Track Tasks issued in memos that are searchable and archived for future reference.</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/eea.png" /></a>
@@ -106,8 +115,6 @@
 								<p>Data Visualization Application for a 4-Star General to make resource decisions for the next quarter.</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/mtc.png" /></a>
@@ -122,6 +129,8 @@
 								<p>Visualizes 60 different organizations to provide senior executives a snapshot of where eveyone is at daily.</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/homepage.png" /></a>
@@ -129,8 +138,6 @@
 								<p>Created a new internal site for 100,000+ daily users to facilitate information sharing to drive daily operations.</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/dir.png" /></a>
@@ -145,6 +152,8 @@
 								<p>Informational site about past and upcoming hackathons ranging from cyber security to development.</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/fs.png" /></a>
@@ -152,8 +161,6 @@
 								<p>Android Application that helps parents manage their kids medication by using data from the cloud to generate alerts.</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/f4s.png" /></a>
@@ -168,6 +175,8 @@
 								<p>Made dynamic graphs that depict 100,000+ data points for NFL teams to predict team result week by week</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/ops.png" /></a>
@@ -175,8 +184,6 @@
 								<p>Application to help non-profit organization manage volunteers and automate volunteer onboarding</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/hr1.png" /></a>
@@ -191,13 +198,15 @@
 								<p>Helps automate the process of distributing/tracking tickets to football players and staff for each weeks games</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/icr.png" /></a>
 								<h3>ICR INC.</h3>
 								<p>Informative website for Industrial Coating and Restoration Inc. Used to showcase their services and references</p>
 							</article>
-						</div>
+						</div>					
 					</div>
 				</div>
 			</article>
