--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
-								<a class="image featured"><img src="images/tt.png" /></a>
+								<a class="image featured"><img src="images/tt.PNG" /></a>
 								<h3>Travel Funding Tracker</h3>
 								<p>Temporary Travel Tracker for employees to request funds for their trips through a digital approvals process.</p>
 							</article>
