--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<article class="container">
 				<div class="row">
 					<div class="4u 12u(mobile)">
-						<span class="image fit"><img src="images/profile.png" /></span>
+						<span class="image fit"><img src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_400_400/AAMABADGAAwAAQAAAAAAAAz_AAAAJGU4OTA5ZGRlLWU0NmEtNGIyNi04Zjg4LTdjYWZlMDdiMDk4OA.jpg" /></span>
 					</div>
 					<div class="8u 12u(mobile)">
 						<header>
