--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 	<body>
 
 	    <!-- Nav -->
-		<nav id="nav">
+		<!--<nav id="nav">
 			<ul class="container">
 				<li><a href="#top">Top</a></li>
-				<!-- <li><a href="#passion">Passion</a></li> -->
 				<li><a href="#portfolio">Portfolio</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
-		</nav>
+		</nav>-->
 
 	    <!-- Home -->
 		<div class="wrapper style1 first" id="top">
@@ -37,8 +36,8 @@
 						<header>
 							<h1>Hi. I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
-						<p><em>I lead Software teams to develop web applications</em></p>
-						<a href="#portfolio" class="button big scrolly">See My Work</a>
+						<p><em>I love all things web and mobile.</em></p>
+						<!--<a href="#portfolio" class="button big scrolly">See My Work</a>-->
 					</div>
 				</div>
 			</article>
@@ -80,8 +79,8 @@
 		<div class="wrapper style3" id="portfolio">
 			<article>
 				<header>
-					<h2>Here’s some of my recent work.</h2>
-					<p>I love all things web and mobile. I'm currently a software project manager.</p>
+					<h2>Here’s some of my recent products.</h2>
+					<!--<p>I love all things web and mobile. I'm currently a software project manager.</p>-->
 				</header>
 				<div class="container">
 					<div class="row">
