--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				</div>
 				<footer>
 					<ul id="copyright">
-						<li>&copy; 2016 Anees Merzi. All rights reserved.</li><li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2018 Anees Merzi. All rights reserved.</li><li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 			</article>
@@ -238,9 +238,9 @@
 	    <!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
+		<!--<script src="assets/js/skel.min.js"></script>-->
 		<script src="assets/js/skel-viewport.min.js"></script>
-		<script src="assets/js/util.js"></script>
+		<!--<script src="assets/js/util.js"></script>-->
 		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 		<script src="assets/js/main.js"></script>
 
