--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<span class="image fit"><img src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_400_400/AAMABADGAAwAAQAAAAAAAAz_AAAAJGU4OTA5ZGRlLWU0NmEtNGIyNi04Zjg4LTdjYWZlMDdiMDk4OA.jpg" /></span>
 					</div>
 					<div class="8u 12u(mobile)">
-						<header>
+						<header style="margin:0;">
 							<h1>Hi. I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
 						<p><em>I love all things web and mobile.</em></p>
