--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>Hi. I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
 						<p><em>I love all things web and mobile.</em></p>
-						<!--<a href="#portfolio" class="button big scrolly">See My Work</a>-->
+						<a href="https://github.com/yaboyanees/yaboyanees.github.io/blob/master/assets/Anees%20Merzi%20Resume%20(TPM).pdf" class="button big scrolly">See My Resume</a>
 					</div>
 				</div>
 			</article>
@@ -209,6 +209,7 @@
 					</div>
 				</div>
 			</article>
+			<a href="https://github.com/yaboyanees/yaboyanees.github.io/blob/master/assets/Anees%20Merzi%20Resume%20(TPM).pdf" class="button big scrolly">See My Resume</a>
 		</div>
 
 	    <!-- Contact -->
