--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>Hi. I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
 						<p><em>I love all things web and mobile.</em></p>
-						<a href="https://github.com/yaboyanees/yaboyanees.github.io/blob/master/assets/Anees%20Merzi%20Resume%20(TPM).pdf" class="button big scrolly">See My Resume</a>
+						<a href="https://drive.google.com/open?id=1pJQuI5Zd_uCiZZg1kgHtl_NicOU9R1-6" class="button big scrolly">See My Resume</a>
 					</div>
 				</div>
 			</article>
