--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 					</div>
 				</div>
 			</article>
-			<a href="https://github.com/yaboyanees/yaboyanees.github.io/blob/master/assets/Anees%20Merzi%20Resume%20(TPM).pdf" class="button big scrolly">See My Resume</a>
+			<a href="https://drive.google.com/open?id=1pJQuI5Zd_uCiZZg1kgHtl_NicOU9R1-6" class="button big scrolly">Open My Resume</a>
 		</div>
 
 	    <!-- Contact -->
