--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<article class="container">
 				<div class="row">
 					<div class="4u 12u(mobile)">
-						<span class="image fit"><img src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_400_400/AAMABADGAAwAAQAAAAAAAAz_AAAAJGU4OTA5ZGRlLWU0NmEtNGIyNi04Zjg4LTdjYWZlMDdiMDk4OA.jpg" /></span>
+						<span class="image fit"><img src="https://media.licdn.com/dms/image/C5603AQGWht6tlQXQMg/profile-displayphoto-shrink_200_200/0?e=1529031600&v=beta&t=6m5ZT876b_LsEVWs8F5JwcXOWfUWDbZpAORPUMcuOEc" /></span>
 					</div>
 					<div class="8u 12u(mobile)">
 						<header style="margin:0;">
