--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<header style="margin:0;">
 							<h1>Hi. I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
-						<p><em>I'm obsessed with delivering pleasant web & mobile experiences. As a leader, I strive to develop, build, and genuinely care for my team.</em></p>
+						<p><em>I'm obsessed with delivering pleasant web & mobile experiences. As a leader, I strive to develop, build, and genuinely care for my teammates.</em></p>
 						<a href="https://drive.google.com/open?id=1UYI_G7UimVkGrWACpRejbuz_xnqbgYXP" class="button big scrolly">See My Resume</a>
 					</div>
 				</div>
