--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<article class="container">
 				<div class="row">
 					<div class="4u 12u(mobile)">
-						<span class="image fit"><img src="https://media.licdn.com/dms/image/C5603AQFEfHqLPyhEuw/profile-displayphoto-shrink_200_200/0?e=1544054400&v=beta&t=SZ1JdfqtXe06D97Rw3T5jd6dB3f_69GPBSKV8j2E9YY" /></span>
+						<span class="image fit"><img src="https://media.licdn.com/dms/image/C5603AQFEfHqLPyhEuw/profile-displayphoto-shrink_200_200/0?e=1558569600&v=beta&t=a76mdc4MBrYGnpkx18HlZ0jCPRgAQYxamPFpMsfMaKU" /></span>
 					</div>
 					<div class="8u 12u(mobile)">
 						<header style="margin:0;">
@@ -48,7 +48,7 @@
 			<article>
 				<header>
 					<h2>About me</h2>
-					<p>I love all things web and mobile. I'm currently a software project manager. I particularly love using the following:</p>
+					<p>I love all things web and mobile. I'm currently a Product Owner. I particularly love using the following:</p>
 				</header>
 				<div class="container">
 					<div class="row">
@@ -86,6 +86,13 @@
 					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
+								<a class="image featured"><img src="images/twitch.PNG" /></a>
+								<h3>Twitch Clips Extension</h3>
+								<p>Creates and displays relevant clips during the livestream for instant replays and cheering.</p>
+							</article>
+						</div>
+						<div class="4u 12u(mobile)">
+							<article class="box style2">
 								<a class="image featured"><img src="images/tt.PNG" /></a>
 								<h3>Travel Funding Tracker</h3>
 								<p>Temporary Travel Tracker for employees to request funds for their trips through a digital approvals process.</p>
@@ -98,6 +105,8 @@
 								<p>Data Visualization App that shows how OHA allocates money across Hawaii in a transparent manner.</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/etm.png" /></a>
@@ -105,8 +114,6 @@
 								<p>Approve and Track Tasks issued in memos that are searchable and archived for future reference.</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/eea.png" /></a>
@@ -121,6 +128,8 @@
 								<p>Training Calendar in a timeline view that displays events in a drilldown format to show how each event is nested.</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/perstat.png" /></a>
@@ -128,8 +137,6 @@
 								<p>Visualizes 60 different organizations to provide senior executives a snapshot of where eveyone is at daily.</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/homepage.png" /></a>
@@ -144,6 +151,8 @@
 								<p>Application to help users find contact details and return results by directorate, rank, and name.</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/disrupt.png" /></a>
@@ -151,8 +160,6 @@
 								<p>Informational site about past and upcoming hackathons ranging from cyber security to development.</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/fs.png" /></a>
@@ -167,6 +174,8 @@
 								<p>Prototype Application for USDA to make a production app that helps families apply for free/discounted school lunch </p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/q5.png" /></a>
@@ -174,8 +183,6 @@
 								<p>Made dynamic graphs that depict 100,000+ data points for NFL teams to predict team result week by week</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/ops.png" /></a>
@@ -190,6 +197,8 @@
 								<p>Decision Support System for HR department to select the best internal employee for the next promotion/job</p>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/fbt.png" /></a>
@@ -197,8 +206,6 @@
 								<p>Helps automate the process of distributing/tracking tickets to football players and staff for each weeks games</p>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/icr.png" /></a>
